src/objects/Contact_Us_Language__c.object
<CustomObject>
    <description>This object is for configuring the language/countries for the contact us page</description>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_1__c</fullName>
        <description>This is the part of the terms and conditions label that comes before the link to the terms and conditions.</description>
        <label>Accept Terms and Conditions Label Part 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_2__c</fullName>
        <description>This is the part of the terms and conditions label that will link to the terms and conditions</description>
        <label>Accept Terms and Conditions Label Part 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label_Part_3__c</fullName>
        <description>This is the part (can be empty) of the terms and conditions label that will come after the link to the terms and conditions</description>
        <label>Accept Terms and Conditions Label Part 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_and_Conditions_Label__c</fullName>
        <description>label for accept Ts &amp; Cs checkbox</description>
        <label>Accept Terms and Conditions Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Questions__c</fullName>
        <description>Label used for the &quot;Additional Questions&quot; header in the case summary.</description>
        <inlineHelpText>Label used for the &quot;Additional Questions&quot; header in the case summary.</inlineHelpText>
        <label>Additional Questions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Range_Please_Select__c</fullName>
        <label>Age Range Please Select</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Search_Button_Label__c</fullName>
        <label>Article Search Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Search_Label__c</fullName>
        <label>Article Search Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_to_Results__c</fullName>
        <label>Back to Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode_Search_Label__c</fullName>
        <label>Barcode Search Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode_Tab__c</fullName>
        <label>Barcode Tab</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigData_Locale_Code__c</fullName>
        <description>Specific locale code required for bigdata/where to buy/sibling finder support:
https://msdn.microsoft.com/en-ca/library/ee825488(v=cs.20).aspx</description>
        <inlineHelpText>Specific locale code required for bigdata/where to buy/sibling finder support:
https://msdn.microsoft.com/en-ca/library/ee825488(v=cs.20).aspx</inlineHelpText>
        <label>BigData Locale Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate_field_validation_error__c</fullName>
        <label>Birthdate field validation error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Label__c</fullName>
        <label>Brand Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Please_Select__c</fullName>
        <label>Brand Please Select</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Label_Submit__c</fullName>
        <label>Button Label Submit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Alternate_Contact_Details__c</fullName>
        <description>Holds translation for &quot;Please provide alternative contact details?&quot; label for CSAT Survey</description>
        <inlineHelpText>Holds translation for &quot;Please provide alternative contact details?&quot; label for CSAT Survey</inlineHelpText>
        <label>CSAT Alternate Contact Details</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Hear_Feedback__c</fullName>
        <description>Holds translation/wording for line above survey when response has NOT been received</description>
        <inlineHelpText>Holds translation/wording for line above survey when response has NOT been received</inlineHelpText>
        <label>CSAT Hear Feedback</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_No_Response_Received_Submission__c</fullName>
        <description>Holds translation/wording to display on the post submission page on the CSAT Survey when the consumer provides alternative contact details</description>
        <inlineHelpText>Holds translation/wording to display on the post submission page on the CSAT Survey when the consumer provides alternative contact details</inlineHelpText>
        <label>CSAT No Response Received Submission</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Receive_Response__c</fullName>
        <description>Holds translation for &quot;Did you receive our response?&quot; label for CSAT Survey</description>
        <inlineHelpText>Holds translation for &quot;Did you receive our response?&quot; label for CSAT Survey</inlineHelpText>
        <label>CSAT Receive Response</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Response_Below__c</fullName>
        <description>Holds translation for &quot;Please find our response below:&quot; label for CSAT Survey</description>
        <inlineHelpText>Holds translation for &quot;Please find our response below:&quot; label for CSAT Survey</inlineHelpText>
        <label>CSAT Response Below</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Response_Help__c</fullName>
        <description>Holds translation for &quot;Did the above response help?&quot; label for CSAT Survey</description>
        <inlineHelpText>Holds translation for &quot;Did the above response help?&quot; label for CSAT Survey</inlineHelpText>
        <label>CSAT Response Help</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Survey_Not_Found_Message__c</fullName>
        <label>CSAT Survey Not Found Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Thank_you_message__c</fullName>
        <label>CSAT Thank you message</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Think_about_experience__c</fullName>
        <description>Holds translation/wording for CSAT form to display above survey when response has been received</description>
        <inlineHelpText>Holds translation/wording for CSAT form to display above survey when response has been received</inlineHelpText>
        <label>CSAT Think about experience</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSAT_Welcome_Message__c</fullName>
        <label>CSAT Welcome Message</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <description>Cancel button label</description>
        <label>Cancel</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Characters_Remaining__c</fullName>
        <description>Text for &quot;xxx characters remaining&quot; dynamic label</description>
        <label>Characters Remaining</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Window__c</fullName>
        <description>Link text to close feedback dialog</description>
        <label>Close Window</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Dialog_No__c</fullName>
        <label>Contact Us Address Dialog No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Dialog_Yes__c</fullName>
        <label>Contact Us Address Dialog Yes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Line_1__c</fullName>
        <label>Contact Us Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Line_2__c</fullName>
        <label>Contact Us Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Line_3__c</fullName>
        <label>Contact Us Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Address_Verification__c</fullName>
        <description>Address Verification Dialog Title</description>
        <label>Contact Us Address Verification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Age__c</fullName>
        <description>Label for Age Range field on Contact Us form</description>
        <label>Contact Us Age</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Allowed_Attachements__c</fullName>
        <defaultValue>&quot;docx,pdf&quot;</defaultValue>
        <inlineHelpText>Enter comma separated values. No spaces. For example: &quot;docx,pdf&quot;</inlineHelpText>
        <label>Contact Us Allowed Attachements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Are_you_emailing_us__c</fullName>
        <label>Contact Us Are you emailing us</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Attachements_Description__c</fullName>
        <label>Contact Us Attachements Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Attachements_Label__c</fullName>
        <label>Contact Us Attachements Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Attachements_Not_Supported__c</fullName>
        <inlineHelpText>Message on the page that will show up if attachments are not supported.</inlineHelpText>
        <label>Contact Us Attachements Not Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Attachment_is_too_big_message__c</fullName>
        <label>Contact Us Attachment is too big message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Birth_Date_Placeholder__c</fullName>
        <description>Placeholder text to show in birthdate field, e.g., MM/YYYY</description>
        <label>Contact Us Birth Date Placeholder</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Birth_Date__c</fullName>
        <label>Contact Us Birth Date</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_City_Town__c</fullName>
        <label>Contact Us City / Town</label>
        <length>112</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Comment_SubHeading__c</fullName>
        <label>Contact Us Comment SubHeading</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Continue__c</fullName>
        <label>Contact Us Continue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Email_Address__c</fullName>
        <label>Contact Us Email Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_First_Name__c</fullName>
        <label>Contact Us First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Form_Text__c</fullName>
        <description>Text that appears at the top of the form</description>
        <label>Contact Us Form Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Gender__c</fullName>
        <label>Contact Us Gender</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Invalid_Address__c</fullName>
        <label>Contact Us Invalid Address</label>
        <length>112</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Invalid_Attachment_Message__c</fullName>
        <label>Contact Us Invalid Attachment Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Keep_Entered_Address__c</fullName>
        <description>Displayed label for entered address in address verification dialog box</description>
        <label>Contact Us Keep Entered Address</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Last_Name__c</fullName>
        <label>Contact Us Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Mandatory_Fields_Key__c</fullName>
        <label>Contact Us Mandatory Fields Key</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Override_Reason__c</fullName>
        <label>Contact Us Override Reason</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Phone_Placeholder__c</fullName>
        <description>Placeholder text shown in the Contact Us Phone field</description>
        <label>Contact Us Phone Placeholder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Phone__c</fullName>
        <label>Contact Us Phone</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Please_Enter_Your_Comment__c</fullName>
        <label>Contact Us Please Enter Your Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Product_Not_Found_Checkbox__c</fullName>
        <label>Contact Us Product Not Found Checkbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Product_Not_Found_Label__c</fullName>
        <description>Label for product search that describes what to do if product not found.</description>
        <label>Contact Us Product Not Found Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Product_Search_Header__c</fullName>
        <label>Contact Us Product Search Header</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Reason_for_Writing__c</fullName>
        <label>Contact Us Reason for Writing</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_State_Province_County__c</fullName>
        <label>Contact Us State/Province/County</label>
        <length>112</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Suggested_Address__c</fullName>
        <description>Displayed message for strikeIron address on address verification dialog</description>
        <label>Contact Us Suggested Address</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Too_Young_Heading__c</fullName>
        <label>Contact Us Too Young Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Too_Young_Text__c</fullName>
        <label>Contact Us Too Young Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Want_To_Continue__c</fullName>
        <label>Contact Us Want To Continue</label>
        <length>112</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Zip_Postal_Code__c</fullName>
        <label>Contact Us Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Filter_Label__c</fullName>
        <description>label for country filter field</description>
        <label>Country Filter Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Label__c</fullName>
        <label>Country Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Picklist_Label__c</fullName>
        <inlineHelpText>Text you want to appear in the picklist value when country list is created.</inlineHelpText>
        <label>Country Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message_Font_Size__c</fullName>
        <defaultValue>&quot;16px&quot;</defaultValue>
        <label>Error Message Font Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Articles__c</fullName>
        <label>Featured Articles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Intro__c</fullName>
        <description>Intro text on feedback form</description>
        <label>Feedback Intro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Thanks__c</fullName>
        <description>Message display after article feedback is submitted</description>
        <label>Feedback Thanks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Title__c</fullName>
        <description>Title for feedback form</description>
        <label>Feedback Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_is_required_message__c</fullName>
        <label>Field is required message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRCountryIsoCode__c</fullName>
        <label>Country Alpha2 ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRLanguageIsoCode__c</fullName>
        <label>Language 639-1 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Female__c</fullName>
        <label>Gender Female</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Male__c</fullName>
        <label>Gender Male</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Not_Specified__c</fullName>
        <label>Gender Not Specified</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Please_Select__c</fullName>
        <label>Gender Please Select</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Links__c</fullName>
        <description>Label for Helpful Links section</description>
        <label>Helpful Links</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_No__c</fullName>
        <description>Negative response to &quot;Was this article helpful?&quot;</description>
        <label>Helpful No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Prompt__c</fullName>
        <description>Text to ask if an article was helpful</description>
        <label>Helpful Prompt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Yes__c</fullName>
        <description>Positive response to &quot;Was this article helpful?&quot;</description>
        <label>Helpful Yes</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_agree_URL__c</fullName>
        <label>I agree URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invalid_email_message__c</fullName>
        <label>Invalid email message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Label__c</fullName>
        <label>Language Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Locale_Key__c</fullName>
        <label>Language Locale Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Picklist_Label__c</fullName>
        <inlineHelpText>Language display label in the picklist. Eg. German - Deutsch</inlineHelpText>
        <label>Language Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_Agent_Button_Id__c</fullName>
        <label>Live Agent Button Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Connecting_Message__c</fullName>
        <label>Live Agent Connecting Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Deployment_Id__c</fullName>
        <label>Live Agent Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_End_Chat_Button__c</fullName>
        <label>Live Agent End Chat Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Request_Chat_Button__c</fullName>
        <label>Live Agent Request Chat Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Save_Chat_Button__c</fullName>
        <label>Live Agent Save Chat Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Send_Button__c</fullName>
        <label>Live Agent Send Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Starting_Message__c</fullName>
        <label>Live Agent Starting Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next__c</fullName>
        <description>Next Link Label</description>
        <label>Next</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Results__c</fullName>
        <label>No Results</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_field_validation_error__c</fullName>
        <label>Number field validation error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKB_Page_Intro__c</fullName>
        <label>PKB Page Intro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Heading__c</fullName>
        <label>Page Heading Contact Us</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Field_Validation_Error__c</fullName>
        <label>Phone Field Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous__c</fullName>
        <description>Previous link label</description>
        <label>Previous</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy__c</fullName>
        <label>Privacy</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Available_for_Return__c</fullName>
        <label>Product Available for Return</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantities__c</fullName>
        <description>Header used when adding product quantities to the case summary.</description>
        <inlineHelpText>Header used when adding product quantities to the case summary.</inlineHelpText>
        <label>Product Quantities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Results_No_Description__c</fullName>
        <label>Product Results No Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Return_Disclosure__c</fullName>
        <label>Product Return Disclosure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Search_Add_Product__c</fullName>
        <label>Product Search Add Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Label__c</fullName>
        <label>Product Search Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Placeholder__c</fullName>
        <description>Translated placeholder for the product search field on the emailUs page</description>
        <inlineHelpText>Translated placeholder for the product search field on the emailUs page</inlineHelpText>
        <label>Product Search Placeholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Products_Added_Count__c</fullName>
        <inlineHelpText>Message next to the products added count - e.g &apos;2 Added&apos;</inlineHelpText>
        <label>Product Search Products Added Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Tab__c</fullName>
        <label>Product Search Tab</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Expiration_Date__c</fullName>
        <label>Products Added Expiration Date</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Label__c</fullName>
        <label>Products Added Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Production_Code_Help__c</fullName>
        <label>Products Added Production Code Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Production_Code__c</fullName>
        <label>Products Added Production Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Quantity__c</fullName>
        <label>Products Added Quantity</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added_Same_Version__c</fullName>
        <label>Products Added Same Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>